--- a/web/public/styles.css
+++ b/web/public/styles.css
@@ -1,20 +1,80 @@
 body {
 	font-family: arial, verdana, sans-serif;
-	font-size: 12px;
+	font-size: 14px;
+}
+
+#content {
+	width: 980px;
+	margin: auto;
+	text-align: center;
+}
+
+#content_bg {
+	background: linear-gradient(top, #acdd4a, #77d5f7);
+	background: -moz-linear-gradient(top, #acdd4a, #77d5f7);
+	background: -webkit-linear-gradient(top, #acdd4a, #77d5f7);
+	min-height: 700px;
+}
+
+#header {
+	background: linear-gradient(top, #77d5f7, #acdd4a);
+	background: -moz-linear-gradient(top, #77d5f7, #acdd4a);
+	background: -webkit-linear-gradient(top, #77d5f7, #acdd4a);
+	color: #fff;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
+#header_left {
+	background: rgba(255,255,255,0.4);
+	float: left;
+	width: 20%;
+	font-size: 14px;
+	color: #000;
+	margin-top: 20px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
+#header_center {
+	float: left;
+	width: 60%;
+}
+
+#header_right {
+	background: rgba(255,255,255,0.4);
+	float: left;
+	width: 20%;
+	font-size: 14px;
+	color: #000;
+	margin-top: 20px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
+#header_clear {
+	clear: both;
+}
+
+#titlebar {
+	width: 80%;
+	background: rgba(255,255,255,0.4);
+	margin: auto;
+	margin-bottom: 10px;
+
 }
 
 #options_list {
-	float: left;
-	width: 500px;
+	background: rgba(255,255,255,0.4);
+	margin: auto;
+	text-align: left;
 }
 
 #mindmap {
-	float: left;
-	width: 500px;
-}
-
-#clearfloat {
-	clear: both;
+	width: 900px;
+	height: 500px;
+	background: rgba(0,0,0,0.4);
+	margin: auto;
 }
 
 .link_style {
