moar web featur3s

--- a/web/public/styles.css
+++ b/web/public/styles.css
@@ -68,7 +68,7 @@ body {
 	background: rgba(255,255,255,0.4);
 	width: 80%;
 	margin: auto;
-	text-align: left;
+	text-align: center;
 }
 
 #mindmap {
